Allow native access when running Java 25 or later.